# satisfactory-world-generator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  screenshot.kra
.github/workflows/: pages.yml  release.yml
scripts/: README-WIN11.md  README.md  convert-no-version.js  convert.js  extract-win11-exp.cs  extract-win11-stable.cs  extract.cs  version-info.js
src/: app.rs  cli.rs  default-world.json  game.rs  main.rs  random_stream.rs  randomization.rs  stats.rs
src/app/: constants.rs  mod.rs  outline.rs  plot_item.rs  textures.rs  ui.rs  view_options.rs
