[package]
name = "satisfactory-random-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
egui_plot = { version = "0.34.1", optional = true }
clap = { version = "4.5.47", features = ["derive"], optional = true }
plotlib = { version = "0.5.1", optional = true }
env_logger = "0.11.10"
futures = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
itertools = "0.14.0"

# optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[features]
cli = ["dep:clap", "dep:plotlib"]
gui = ["dep:eframe", "dep:egui", "dep:egui_plot"]
default = ["cli"]